Added @ParameterSupplier annotation to allow link test method with parameter supplying method(s)